--- a/volume02/volume02_25/MyApplication4/app/src/main/res/layout/activity_main.xml
+++ b/volume02/volume02_25/MyApplication4/app/src/main/res/layout/activity_main.xml
@@ -26,4 +26,12 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="131dp" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="インテント"
+        android:id="@+id/btn2"
+        android:layout_below="@+id/button1"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
