--- a/volume05_chap_11/sample01_draw/app/src/main/res/layout/sample_custom_view.xml
+++ b/volume05_chap_11/sample01_draw/app/src/main/res/layout/sample_custom_view.xml
@@ -1,7 +1,8 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res/com.example.katotakashi.sample01_draw"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
 
     <com.example.katotakashi.sample01_draw.CustomView
         android:background="#ccc"
@@ -9,14 +10,12 @@
         android:layout_height="300dp"
         android:paddingLeft="20dp"
         android:paddingBottom="40dp"
-        app:exampleDimension="24sp"
-        app:exampleColor="#33b5e5"
-        app:exampleString="Hello, CustomView"
-        app:exampleDrawable="@android:drawable/ic_menu_add" />
+        />
 
+    <Button
+        android:id="@+id/delBtn1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
-
-
-
-</FrameLayout>
+</LinearLayout>
 
